--- a/src/app/components/pages/dashboard/dashboard.component.html
+++ b/src/app/components/pages/dashboard/dashboard.component.html
@@ -1,11 +1,12 @@
 <div class="container-fluid justify-content-center">
     <div class="text-center p-3">
         <div class="promotion-banner">
-            <h1>Offerta promozionale!</h1>
-            <p><h3>Solo per Agosto!</h3>
-                <p>Sconto speciale del 30% su tutti i prodotti di stagione</p>
+            <h1>Offerta promozionale!!!</h1>
+            <p>
+            <h3>**Solo per Agosto**</h3>
+            <p>Sconto speciale del 30% su tutti i prodotti di stagione</p>
         </div>
-        <video style="float: right; margin-left: 50px" width="560" height="500" autoplay muted loop>
+        <video style="float: right; margin-left: 50px" width="700" height="1100" autoplay muted loop>
             <source src="assets/media/video/pexels-jessica-politi-992601-1280x720-25fps.mp4" type="video/mp4">
         </video>
         <div class="card w-74">
@@ -38,17 +39,58 @@
                     PIL del nostro
                     Paese,
                     avvicinarci ad un’alimentazione più sana ed alla cucina naturale.</p>
-                <h5 class="card-title">Frutta e verdura di stagione: cosa comprare a maggio</h5>
-                <p class="card-text">Con la sua esplosione di colori la Natura sembra rinascere, arrivano tante
-                    nuove varietà
-                    di frutta e verdura.
-                    Fanno capolino le fragole, buone da mangiare sia fresche sia cotte in torte o marmellate,
-                    possono essere
-                    accompagnate dalla crema inglese,
-                    dalla panna o dal cioccolato. Potrete anche trovare la nespola del Giappone.
-                    A maggio si possono mangiare molte nuove verdure come piselli, asparagi, bietole, cicorie,
-                    fagiolini, fave,
-                    finocchi,, le patate novelle, la rucola."</p>
+                <h5 class="card-title">Frutta e verdura di stagione: cosa comprare a Luglio</h5>
+                <p class="card-text">La frutta e verdura di stagione del mese di Luglio è ricchissima di colori e
+                    profumi. Gli alberi da frutto e l’orto regalano alimenti ricchi di acqua, sali minerali e vitamine,
+                    utilissimi per idratarsi e affrontare al meglio il caldo, dall’anguria sino al melone. Scopriamo
+                    insieme cosa acquistare questo mese.
+                <p>La frutta di Luglio</p>
+                Per contrastare il caldo, che in tanti giorni si fa torrido, ci arriva in aiuto la frutta di stagione di
+                Luglio. Basti pensare all’anguria che è costituita per il 90-95% da acqua ed è un vero e proprio
+                idratante naturale, da mangiare in estate quando la pelle è secca per il troppo sole preso. Anche il
+                melone è ricchissimo d’acqua, ottimo per la preparazione di granite o macedonie. Da gustare pure i
+                frutti di colore rosso come fragole e ciliegie che svolgono un’importante funzione anti-invecchiamento
+                cellulare, contrastando l’azione dei radicali liberi. Gli alimenti di colore arancione, come carote e
+                albicocche, sono invece ricchi di beta carotene, utile per la pelle, in quanto riesce ad abbronzarla in
+                modo graduale e impeccabile.
+
+                La frutta di stagione a Luglio:
+                Albicocche
+                Angurie
+                Banane
+                Ciliegie
+                Fichi
+                Fragole
+                Lamponi
+                Meloni
+                Mirtilli
+                Pesche
+                Pere
+                Susine
+                <p></p>La verdura e ortaggi di Luglio
+                <p></p>A Luglio maturano i pomodori, antiossidanti per eccellenza per combattere i radicali liberi,
+                responsabili dell’invecchiamento delle cellule. In questo mese è ideale anche mangiare le verdure a
+                crudo, appena colte dall’orto, per sfruttarne tutte le proprietà nutritive e i benefici. Dalle carote ai
+                cetrioli, passando per la lattuga, le fave, il radicchio e i ravanelli: c’è solo l’imbarazzo della
+                scelta per fare il pieno di benessere.
+
+                La verdura e gli ortaggi di stagione a Luglio:
+                Carote
+                Cipolle
+                Cavoli
+                Cetrioli
+                Cicoria
+                Fagiolini
+                Fave
+                Melanzane
+                Patate
+                Peperoni
+                Pomodori
+                Radicchio
+                Ravanelli
+                Rucola
+                Sedano
+                Zucchine
             </div>
         </div>
     </div>
