--- a/src/app/components/pages/frutta/frutta.component.html
+++ b/src/app/components/pages/frutta/frutta.component.html
@@ -1,5 +1,5 @@
 <img src="assets/media/images/frutta_verdura_ortaggi-of-seasons.jpg" alt=""
-  style="float: right; margin-top: 70px; margin-right: 170px;" mar height="340"/>
+  style="float: right; margin-top: 70px; margin-right: 170px;" mar height="340" />
 <div class="container">
   <div class="row">
     <div class="col-6 py-5">
@@ -7,47 +7,8 @@
         <ul class="link-list px-5" #formFrutta>
           <li>
             <div class="form-check form-check-group" aria-describedby="">
-              <input type="checkbox" id="checkbox06" value="Mele Rosse">
+              <input type="checkbox" id="checkbox06" disabled value="Mele Rosse">
               <label for="checkbox06">Mele Rosse</label>
-            </div>
-            <div>
-              <label for="inputNumber" class="input-number-label">Kg</label>
-              <span class="input-number">
-                <input type="number" data-bs-input id="input-number" name="input-number" step="0.5" value="0.00"
-                  min="0.00">
-              </span>
-            </div>
-          </li>
-          <li>
-            <div class="form-check form-check-group" aria-describedby="">
-              <input type="checkbox" id="checkbox07" value="Mele Gialle">
-              <label for="checkbox07">Mele Gialle</label>
-            </div>
-            <div>
-              <label for="inputNumber" class="input-number-label">Kg</label>
-              <span class="input-number">
-                <input type="number" data-bs-input id="input-number" name="input-number" step="0.5" value="0.00"
-                  min="0.00">
-              </span>
-            </div>
-          </li>
-          <li>
-            <div class="form-check form-check-group" aria-describedby="">
-              <input type="checkbox" id="checkbox08" value="Mele Verdi">
-              <label for="checkbox8">Mele Verdi</label>
-            </div>
-            <div>
-              <label for="inputNumber" class="input-number-label">Kg</label>
-              <span class="input-number">
-                <input type="number" data-bs-input id="input-number" name="input-number" step="0.5" value="0.00"
-                  min="0.00">
-              </span>
-            </div>
-          </li>
-          <li>
-            <div class="form-check form-check-group disabled" aria-describedby="">
-              <input type="checkbox" id="checkbox09" disabled value="Banane">
-              <label for="checkbox9">Banane</label>
             </div>
             <div>
               <label for="inputNumber" class="input-number-label">Kg</label>
@@ -59,14 +20,53 @@
           </li>
           <li>
             <div class="form-check form-check-group" aria-describedby="">
-              <input type="checkbox" id="checkbox10" value="Kiwi">
+              <input type="checkbox" id="checkbox07" disabled value="Mele Gialle">
+              <label for="checkbox07">Mele Gialle</label>
+            </div>
+            <div>
+              <label for="inputNumber" class="input-number-label">Kg</label>
+              <span class="input-number">
+                <input type="number" data-bs-input id="input-number" name="input-number" step="0.5" value="0.00"
+                  min="0.00" disabled>
+              </span>
+            </div>
+          </li>
+          <li>
+            <div class="form-check form-check-group" aria-describedby="">
+              <input type="checkbox" id="checkbox08" disabled value="Mele Verdi">
+              <label for="checkbox08">Mele Verdi</label>
+            </div>
+            <div>
+              <label for="inputNumber" class="input-number-label">Kg</label>
+              <span class="input-number">
+                <input type="number" data-bs-input id="input-number" name="input-number" step="0.5" value="0.00"
+                  min="0.00" disabled>
+              </span>
+            </div>
+          </li>
+          <li>
+            <div class="form-check form-check-group" aria-describedby="">
+              <input type="checkbox" id="checkbox09" disabled value="Banane">
+              <label for="checkbox09">Banana</label>
+            </div>
+            <div>
+              <label for="inputNumber" class="input-number-label">Kg</label>
+              <span class="input-number">
+                <input type="number" data-bs-input id="input-number" name="input-number" step="0.5" value="0.00"
+                  min="0.00" disabled>
+              </span>
+            </div>
+          </li>
+          <li>
+            <div class="form-check form-check-group" aria-describedby="">
+              <input type="checkbox" id="checkbox10" disabled value="Kiwi">
               <label for="checkbox10">Kiwi</label>
             </div>
             <div>
               <label for="inputNumber" class="input-number-label">Kg</label>
               <span class="input-number">
                 <input type="number" data-bs-input id="input-number" name="input-number" step="0.5" value="0.00"
-                  min="0.00">
+                  min="0.00" disabled>
               </span>
             </div>
           </li>
@@ -96,10 +96,127 @@
               </span>
             </div>
           </li>
+          <li>
+            <div class="form-check form-check-group" aria-describedby="">
+              <input type="checkbox" id="checkbox13" value="Mele Rosse">
+              <label for="checkbox13">Anguria</label>
+            </div>
+            <div>
+              <label for="inputNumber" class="input-number-label">Kg</label>
+              <span class="input-number">
+                <input type="number" data-bs-input id="input-number" name="input-number" step="0.5" value="0.00"
+                  min="0.00">
+              </span>
+            </div>
+          </li>
+          <li>
+            <div class="form-check form-check-group" aria-describedby="">
+              <input type="checkbox" id="checkbox14" value="Mele Rosse">
+              <label for="checkbox14">Melone</label>
+            </div>
+            <div>
+              <label for="inputNumber" class="input-number-label">Kg</label>
+              <span class="input-number">
+                <input type="number" data-bs-input id="input-number" name="input-number" step="0.5" value="0.00"
+                  min="0.00">
+              </span>
+            </div>
+          </li>
+          <li>
+            <div class="form-check form-check-group" aria-describedby="">
+              <input type="checkbox" id="checkbox15" value="Mele Rosse">
+              <label for="checkbox15">Ciliege</label>
+            </div>
+            <div>
+              <label for="inputNumber" class="input-number-label">Kg</label>
+              <span class="input-number">
+                <input type="number" data-bs-input id="input-number" name="input-number" step="0.5" value="0.00"
+                  min="0.00">
+              </span>
+            </div>
+          </li>
+          <li>
+            <div class="form-check form-check-group" aria-describedby="">
+              <input type="checkbox" id="checkbox16" value="Mele Rosse">
+              <label for="checkbox16">Albicocche</label>
+            </div>
+            <div>
+              <label for="inputNumber" class="input-number-label">Kg</label>
+              <span class="input-number">
+                <input type="number" data-bs-input id="input-number" name="input-number" step="0.5" value="0.00"
+                  min="0.00">
+              </span>
+            </div>
+          </li>
+          <li>
+            <div class="form-check form-check-group" aria-describedby="">
+              <input type="checkbox" id="checkbox17" value="Mele Rosse">
+              <label for="checkbox17">Fichi</label>
+            </div>
+            <div>
+              <label for="inputNumber" class="input-number-label">Kg</label>
+              <span class="input-number">
+                <input type="number" data-bs-input id="input-number" name="input-number" step="0.5" value="0.00"
+                  min="0.00">
+              </span>
+            </div>
+          </li>
+          <li>
+            <div class="form-check form-check-group" aria-describedby="">
+              <input type="checkbox" id="checkbox18" value="Mele Rosse">
+              <label for="checkbox18">Lamponi</label>
+            </div>
+            <div>
+              <label for="inputNumber" class="input-number-label">Kg</label>
+              <span class="input-number">
+                <input type="number" data-bs-input id="input-number" name="input-number" step="0.5" value="0.00"
+                  min="0.00">
+              </span>
+            </div>
+          </li>
+          <li>
+            <div class="form-check form-check-group" aria-describedby="">
+              <input type="checkbox" id="checkbox19" value="Mele Rosse">
+              <label for="checkbox19">Mirtilli</label>
+            </div>
+            <div>
+              <label for="inputNumber" class="input-number-label">Kg</label>
+              <span class="input-number">
+                <input type="number" data-bs-input id="input-number" name="input-number" step="0.5" value="0.00"
+                  min="0.00">
+              </span>
+            </div>
+          </li>
+          <li>
+            <div class="form-check form-check-group" aria-describedby="">
+              <input type="checkbox" id="checkbox20" value="Mele Rosse">
+              <label for="checkbox20">Pesche</label>
+            </div>
+            <div>
+              <label for="inputNumber" class="input-number-label">Kg</label>
+              <span class="input-number">
+                <input type="number" data-bs-input id="input-number" name="input-number" step="0.5" value="0.00"
+                  min="0.00">
+              </span>
+            </div>
+          </li>
+          <li>
+            <div class="form-check form-check-group" aria-describedby="">
+              <input type="checkbox" id="checkbox21" value="Mele Rosse">
+              <label for="checkbox21">Susine</label>
+            </div>
+            <div>
+              <label for="inputNumber" class="input-number-label">Kg</label>
+              <span class="input-number">
+                <input type="number" data-bs-input id="input-number" name="input-number" step="0.5" value="0.00"
+                  min="0.00">
+              </span>
+            </div>
+          </li>
         </ul>
       </div>
       <hr class="my-3" />
-      <app-aggiungi-al-carrello tipo="vegetables" [form]="formFrutta"></app-aggiungi-al-carrello>
+      <app-aggiungi-al-carrello tipo="fruit" [form]="formFrutta"></app-aggiungi-al-carrello>
     </div>
   </div>
 </div>
