--- a/src/app/components/pages/verdura/verdura.component.html
+++ b/src/app/components/pages/verdura/verdura.component.html
@@ -1,57 +1,62 @@
 <section>
-    <img src="assets/media/images/frutta_verdura_ortaggi-of-seasons.jpg" alt="" style="float: right; margin-top: 70px; margin-right: 170px;" mar height="340">
-      <div class="container">
-          <div class="row">
-              <div class="col-6 py-5">
-      <div class="link-list-wrapper">
+  <img src="assets/media/images/frutta_verdura_ortaggi-of-seasons.jpg" alt=""
+    style="float: right; margin-top: 70px; margin-right: 170px;" mar height="340">
+  <div class="container">
+    <div class="row">
+      <div class="col-6 py-5">
+        <div class="link-list-wrapper">
           <ul class="link-list px-5" #formVerdura>
             <li>
               <div class="form-check form-check-group" aria-describedby="">
-                <input type="checkbox" id="checkbox6" value="Broccoli">
-                <label for="checkbox6">Broccoli</label>
+                <input type="checkbox" id="checkbox06" disabled value="Broccoli">
+                <label for="checkbox06">Broccoli</label>
               </div>
               <div>
-                  <label for="inputNumber" class="input-number-label">Kg</label>
-                  <span class="input-number">
-                      <input type="number" data-bs-input id="input-number" name="input-number" step="0.5" value="0.00" min="0.00">
-                  </span>  
-                </div>
+                <label for="inputNumber" class="input-number-label">Kg</label>
+                <span class="input-number">
+                  <input type="number" data-bs-input id="input-number" name="input-number" step="0.5" value="0.00"
+                    min="0.00" disabled>
+                </span>
+              </div>
             </li>
             <li>
               <div class="form-check form-check-group" aria-describedby="">
-                <input type="checkbox" id="checkbox7" value="Biete">
-                <label for="checkbox7">Biete</label>
+                <input type="checkbox" id="checkbox07" disabled value="Biete">
+                <label for="checkbox07">Biete</label>
               </div>
               <div>
-                  <label for="inputNumber" class="input-number-label">Kg</label>
-                  <span class="input-number">
-                      <input type="number" data-bs-input id="input-number" name="input-number" step="0.5" value="0.00" min="0.00">
-                  </span>
-                </div>
+                <label for="inputNumber" class="input-number-label">Kg</label>
+                <span class="input-number">
+                  <input type="number" data-bs-input id="input-number" name="input-number" step="0.5" value="0.00"
+                    min="0.00" disabled>
+                </span>
+              </div>
             </li>
             <li>
               <div class="form-check form-check-group" aria-describedby="">
-                <input type="checkbox" id="checkbox8" value="Spinaci">
-                <label for="checkbox8">Spinaci</label>
+                <input type="checkbox" id="checkbox08" disabled value="Spinaci">
+                <label for="checkbox08">Spinaci</label>
               </div>
               <div>
-                  <label for="inputNumber" class="input-number-label">Kg</label>
-                  <span class="input-number">
-                      <input type="number" data-bs-input id="input-number" name="input-number" step="0.5" value="0.00" min="0.00">
-                  </span>
-                </div>
+                <label for="inputNumber" class="input-number-label">Kg</label>
+                <span class="input-number">
+                  <input type="number" data-bs-input id="input-number" name="input-number" step="0.5" value="0.00"
+                    min="0.00" disabled>
+                </span>
+              </div>
             </li>
             <li>
-              <div class="form-check form-check-group disabled" aria-describedby="">
-                <input type="checkbox" id="checkbox09" disabled value="Melanzane">
-                <label for="checkbox9">Melanzane</label>
+              <div class="form-check form-check-group" aria-describedby="">
+                <input type="checkbox" id="checkbox09" value="Melanzane">
+                <label for="checkbox09">Melanzane</label>
               </div>
               <div>
-                  <label for="inputNumber" class="input-number-label">Kg</label>
-                  <span class="input-number">
-                      <input type="number" data-bs-input id="input-number" name="input-number" step="0.5" value="0.00" min="0.00" disabled>
-                  </span>
-                </div>
+                <label for="inputNumber" class="input-number-label">Kg</label>
+                <span class="input-number">
+                  <input type="number" data-bs-input id="input-number" name="input-number" step="0.5" value="0.00"
+                    min="0.00">
+                </span>
+              </div>
             </li>
             <li>
               <div class="form-check form-check-group" aria-describedby="">
@@ -59,11 +64,12 @@
                 <label for="checkbox10">Zucchine</label>
               </div>
               <div>
-                  <label for="inputNumber" class="input-number-label">Kg</label>
-                  <span class="input-number">
-                      <input type="number" data-bs-input id="input-number" name="input-number" step="0.5" value="0.00" min="0.00">
-                  </span>
-                </div>
+                <label for="inputNumber" class="input-number-label">Kg</label>
+                <span class="input-number">
+                  <input type="number" data-bs-input id="input-number" name="input-number" step="0.5" value="0.00"
+                    min="0.00">
+                </span>
+              </div>
             </li>
             <li>
               <div class="form-check form-check-group" aria-describedby="">
@@ -71,29 +77,83 @@
                 <label for="checkbox11">Fagiolini</label>
               </div>
               <div>
-                  <label for="inputNumber" class="input-number-label">Kg</label>
-                  <span class="input-number">
-                      <input #numFagiolini type="number" data-bs-input id="input-number" name="input-number" step="0.5" value="0.00" min="0.00">
-                  </span>
-                </div>
+                <label for="inputNumber" class="input-number-label">Kg</label>
+                <span class="input-number">
+                  <input #numFagiolini type="number" data-bs-input id="input-number" name="input-number" step="0.5"
+                    value="0.00" min="0.00">
+                </span>
+              </div>
             </li>
             <li>
               <div class="form-check form-check-group" aria-describedby="">
-                <input type="checkbox" id="checkbox12" value="Carciofi">
+                <input type="checkbox" id="checkbox12" disabled value="Carciofi">
                 <label for="checkbox12">Carciofi</label>
               </div>
               <div>
-                  <label for="inputNumber" class="input-number-label">Kg</label>
-                  <span class="input-number">
-                      <input #numCarciofi type="number" data-bs-input id="input-number" name="input-number" step="0.5" value="0.00" min="0.00">
-                  </span>
-                </div>
+                <label for="inputNumber" class="input-number-label">Kg</label>
+                <span class="input-number">
+                  <input #numCarciofi type="number" data-bs-input id="input-number" name="input-number" step="0.5"
+                    value="0.00" min="0.00" disabled>
+                </span>
+              </div>
+            </li>
+            <li>
+              <div class="form-check form-check-group" aria-describedby="">
+                <input type="checkbox" id="checkbox13" value="Carciofi">
+                <label for="checkbox13">Cavoli</label>
+              </div>
+              <div>
+                <label for="inputNumber" class="input-number-label">Kg</label>
+                <span class="input-number">
+                  <input #numCavoli type="number" data-bs-input id="input-number" name="input-number" step="0.5"
+                    value="0.00" min="0.00">
+                </span>
+              </div>
+            </li>
+            <li>
+              <div class="form-check form-check-group" aria-describedby="">
+                <input type="checkbox" id="checkbox14" value="Carciofi">
+                <label for="checkbox14">Cicoria</label>
+              </div>
+              <div>
+                <label for="inputNumber" class="input-number-label">Kg</label>
+                <span class="input-number">
+                  <input #numCicoria type="number" data-bs-input id="input-number" name="input-number" step="0.5"
+                    value="0.00" min="0.00">
+                </span>
+              </div>
+            </li>
+            <li>
+              <div class="form-check form-check-group" aria-describedby="">
+                <input type="checkbox" id="checkbox15" value="Carciofi">
+                <label for="checkbox15">Fave</label>
+              </div>
+              <div>
+                <label for="inputNumber" class="input-number-label">Kg</label>
+                <span class="input-number">
+                  <input #numFave type="number" data-bs-input id="input-number" name="input-number" step="0.5"
+                    value="0.00" min="0.00">
+                </span>
+              </div>
+            </li>
+            <li>
+              <div class="form-check form-check-group" aria-describedby="">
+                <input type="checkbox" id="checkbox16" value="Carciofi">
+                <label for="checkbox16">Peperoni</label>
+              </div>
+              <div>
+                <label for="inputNumber" class="input-number-label">Kg</label>
+                <span class="input-number">
+                  <input #numPeperoni type="number" data-bs-input id="input-number" name="input-number" step="0.5"
+                    value="0.00" min="0.00">
+                </span>
+              </div>
             </li>
           </ul>
         </div>
         <hr class="my-3">
         <app-aggiungi-al-carrello tipo="vegetables" [form]="formVerdura"></app-aggiungi-al-carrello>
-              </div>
-          </div>
       </div>
+    </div>
+  </div>
 </section>
