--- a/src/app/components/pages/ortaggi/ortaggi.component.html
+++ b/src/app/components/pages/ortaggi/ortaggi.component.html
@@ -1,99 +1,159 @@
 <section>
-    <img src="assets/media/images/frutta_verdura_ortaggi-of-seasons.jpg" alt="" style="float: right; margin-top: 70px; margin-right: 170px;" mar height="340">
-      <div class="container">
-          <div class="row">
-              <div class="col-6 py-5">
-      <div class="link-list-wrapper">
+  <img src="assets/media/images/frutta_verdura_ortaggi-of-seasons.jpg" alt=""
+    style="float: right; margin-top: 70px; margin-right: 170px;" mar height="340">
+  <div class="container">
+    <div class="row">
+      <div class="col-6 py-5">
+        <div class="link-list-wrapper">
           <ul class="link-list px-5" #formOrtaggi>
             <li>
               <div class="form-check form-check-group" aria-describedby="">
                 <input type="checkbox" id="checkbox06" value="Rucola">
-                <label for="checkbox6">Rucola</label>
+                <label for="checkbox06">Rucola</label>
               </div>
               <div>
-                  <label for="inputNumber" class="input-number-label">Kg</label>
-                  <span class="input-number">
-                      <input type="number" data-bs-input id="input-number" name="input-number" step="0.5" value="0.00" min="0.00">
-                  </span>  
-                </div>
+                <label for="inputNumber" class="input-number-label">Kg</label>
+                <span class="input-number">
+                  <input type="number" data-bs-input id="input-number" name="input-number" step="0.5" value="0.00"
+                    min="0.00">
+                </span>
+              </div>
             </li>
             <li>
               <div class="form-check form-check-group" aria-describedby="">
-                <input type="checkbox" id="checkbox07" value="Carote">
-                <label for="checkbox7">Carote</label>
+                <input type="checkbox" id="checkbox07" value="Rucola">
+                <label for="checkbox07">Cipolle</label>
               </div>
               <div>
-                  <label for="inputNumber" class="input-number-label">Kg</label>
-                  <span class="input-number">
-                      <input type="number" data-bs-input id="input-number" name="input-number" step="0.5" value="0.00" min="0.00">
-                  </span>
-                </div>
+                <label for="inputNumber" class="input-number-label">Kg</label>
+                <span class="input-number">
+                  <input type="number" data-bs-input id="input-number" name="input-number" step="0.5" value="0.00"
+                    min="0.00">
+                </span>
+              </div>
             </li>
             <li>
               <div class="form-check form-check-group" aria-describedby="">
-                <input type="checkbox" id="checkbox08" value="Invidia">
-                <label for="checkbox8">Invidia</label>
+                <input type="checkbox" id="checkbox08" value="Carote">
+                <label for="checkbox08">Carote</label>
               </div>
               <div>
-                  <label for="inputNumber" class="input-number-label">Kg</label>
-                  <span class="input-number">
-                      <input type="number" data-bs-input id="input-number" name="input-number" step="0.5" value="0.00" min="0.00">
-                  </span>
-                </div>
+                <label for="inputNumber" class="input-number-label">Kg</label>
+                <span class="input-number">
+                  <input type="number" data-bs-input id="input-number" name="input-number" step="0.5" value="0.00"
+                    min="0.00">
+                </span>
+              </div>
             </li>
-              <li>
+            <li>
               <div class="form-check form-check-group" aria-describedby="">
-                <input type="checkbox" id="checkbox09" value="Patate">
+                <input type="checkbox" id="checkbox09" disabled value="Invidia">
+                <label for="checkbox09">Invidia</label>
+              </div>
+              <div>
+                <label for="inputNumber" class="input-number-label">Kg</label>
+                <span class="input-number">
+                  <input type="number" data-bs-input id="input-number" name="input-number" step="0.5" value="0.00"
+                    min="0.00" disabled>
+                </span>
+              </div>
+            </li>
+            <li>
+              <div class="form-check form-check-group" aria-describedby="">
+                <input type="checkbox" id="checkbox10" value="Patate">
                 <label for="checkbox10">Patate</label>
               </div>
               <div>
-                  <label for="inputNumber" class="input-number-label">Kg</label>
-                  <span class="input-number">
-                      <input type="number" data-bs-input id="input-number" name="input-number" step="0.5" value="0.00" min="0.00">
-                  </span>
-                </div>
+                <label for="inputNumber" class="input-number-label">Kg</label>
+                <span class="input-number">
+                  <input type="number" data-bs-input id="input-number" name="input-number" step="0.5" value="0.00"
+                    min="0.00">
+                </span>
+              </div>
             </li>
             <li>
               <div class="form-check form-check-group" aria-describedby="">
-                <input type="checkbox" id="checkbox10" value="Sedano">
+                <input type="checkbox" id="checkbox11" value="Sedano">
                 <label for="checkbox11">Sedano</label>
               </div>
               <div>
-                  <label for="inputNumber" class="input-number-label">Kg</label>
-                  <span class="input-number">
-                      <input type="number" data-bs-input id="input-number" name="input-number" step="0.5" value="0.00" min="0.00">
-                  </span>
-                </div>
+                <label for="inputNumber" class="input-number-label">Kg</label>
+                <span class="input-number">
+                  <input type="number" data-bs-input id="input-number" name="input-number" step="0.5" value="0.00"
+                    min="0.00">
+                </span>
+              </div>
             </li>
             <li>
               <div class="form-check form-check-group" aria-describedby="">
-                <input type="checkbox" id="checkbox11" value="Pomodori">
+                <input type="checkbox" id="checkbox12" value="Pomodori">
                 <label for="checkbox12">Pomodori</label>
               </div>
               <div>
-                  <label for="inputNumber" class="input-number-label">Kg</label>
-                  <span class="input-number">
-                      <input type="number" data-bs-input id="input-number" name="input-number" step="0.5" value="0.00" min="0.00">
-                  </span>
-                </div>
+                <label for="inputNumber" class="input-number-label">Kg</label>
+                <span class="input-number">
+                  <input type="number" data-bs-input id="input-number" name="input-number" step="0.5" value="0.00"
+                    min="0.00">
+                </span>
+              </div>
             </li>
             <li>
               <div class="form-check form-check-group" aria-describedby="">
-                <input type="checkbox" id="checkbox12" value="Patate Zuccherine">
-                <label for="checkbox12">Patate Zuccherine</label>
+                <input type="checkbox" id="checkbox13" disabled value="Patate Zuccherine">
+                <label for="checkbox13">Patate Zuccherine</label>
               </div>
               <div>
-                  <label for="inputNumber" class="input-number-label">Kg</label>
-                  <span class="input-number">
-                      <input type="number" data-bs-input id="input-number" name="input-number" step="0.5" value="0.00" min="0.00">
-                  </span>
-                </div>
+                <label for="inputNumber" class="input-number-label">Kg</label>
+                <span class="input-number">
+                  <input type="number" data-bs-input id="input-number" name="input-number" step="0.5" value="0.00"
+                    min="0.00" disabled>
+                </span>
+              </div>
+            </li>
+            <li>
+              <div class="form-check form-check-group" aria-describedby="">
+                <input type="checkbox" id="checkbox14" value="Rucola">
+                <label for="checkbo14">Cetrioli</label>
+              </div>
+              <div>
+                <label for="inputNumber" class="input-number-label">Kg</label>
+                <span class="input-number">
+                  <input type="number" data-bs-input id="input-number" name="input-number" step="0.5" value="0.00"
+                    min="0.00">
+                </span>
+              </div>
+            </li>
+            <li>
+              <div class="form-check form-check-group" aria-describedby="">
+                <input type="checkbox" id="checkbox15" value="Rucola">
+                <label for="checkbo15">Radicchio</label>
+              </div>
+              <div>
+                <label for="inputNumber" class="input-number-label">Kg</label>
+                <span class="input-number">
+                  <input type="number" data-bs-input id="input-number" name="input-number" step="0.5" value="0.00"
+                    min="0.00">
+                </span>
+              </div>
+            </li>
+            <li>
+              <div class="form-check form-check-group" aria-describedby="">
+                <input type="checkbox" id="checkbox16" value="Rucola">
+                <label for="checkbo16">Ravanelli</label>
+              </div>
+              <div>
+                <label for="inputNumber" class="input-number-label">Kg</label>
+                <span class="input-number">
+                  <input type="number" data-bs-input id="input-number" name="input-number" step="0.5" value="0.00"
+                    min="0.00">
+                </span>
+              </div>
             </li>
           </ul>
         </div>
         <hr class="my-3">
-        <app-aggiungi-al-carrello tipo="vegetables" [form]="formOrtaggi"></app-aggiungi-al-carrello>
-              </div>
-          </div>
+        <app-aggiungi-al-carrello tipo="vegetable" [form]="formOrtaggi"></app-aggiungi-al-carrello>
       </div>
+    </div>
+  </div>
 </section>
