--- a/src/app/components/pages/frutta/frutta.component.html
+++ b/src/app/components/pages/frutta/frutta.component.html
@@ -98,7 +98,7 @@
           </li>
           <li>
             <div class="form-check form-check-group" aria-describedby="">
-              <input type="checkbox" id="checkbox13" value="Mele Rosse">
+              <input type="checkbox" id="checkbox13" value="Anguria">
               <label for="checkbox13">Anguria</label>
             </div>
             <div>
@@ -111,7 +111,7 @@
           </li>
           <li>
             <div class="form-check form-check-group" aria-describedby="">
-              <input type="checkbox" id="checkbox14" value="Mele Rosse">
+              <input type="checkbox" id="checkbox14" value="Melone">
               <label for="checkbox14">Melone</label>
             </div>
             <div>
@@ -124,7 +124,7 @@
           </li>
           <li>
             <div class="form-check form-check-group" aria-describedby="">
-              <input type="checkbox" id="checkbox15" value="Mele Rosse">
+              <input type="checkbox" id="checkbox15" value="Ciliege">
               <label for="checkbox15">Ciliege</label>
             </div>
             <div>
@@ -137,7 +137,7 @@
           </li>
           <li>
             <div class="form-check form-check-group" aria-describedby="">
-              <input type="checkbox" id="checkbox16" value="Mele Rosse">
+              <input type="checkbox" id="checkbox16" value="Albicocche">
               <label for="checkbox16">Albicocche</label>
             </div>
             <div>
@@ -150,7 +150,7 @@
           </li>
           <li>
             <div class="form-check form-check-group" aria-describedby="">
-              <input type="checkbox" id="checkbox17" value="Mele Rosse">
+              <input type="checkbox" id="checkbox17" value="Fichi">
               <label for="checkbox17">Fichi</label>
             </div>
             <div>
@@ -163,7 +163,7 @@
           </li>
           <li>
             <div class="form-check form-check-group" aria-describedby="">
-              <input type="checkbox" id="checkbox18" value="Mele Rosse">
+              <input type="checkbox" id="checkbox18" value="Lamponi">
               <label for="checkbox18">Lamponi</label>
             </div>
             <div>
@@ -176,7 +176,7 @@
           </li>
           <li>
             <div class="form-check form-check-group" aria-describedby="">
-              <input type="checkbox" id="checkbox19" value="Mele Rosse">
+              <input type="checkbox" id="checkbox19" value="Mirtilli">
               <label for="checkbox19">Mirtilli</label>
             </div>
             <div>
@@ -189,7 +189,7 @@
           </li>
           <li>
             <div class="form-check form-check-group" aria-describedby="">
-              <input type="checkbox" id="checkbox20" value="Mele Rosse">
+              <input type="checkbox" id="checkbox20" value="Pesche">
               <label for="checkbox20">Pesche</label>
             </div>
             <div>
@@ -202,7 +202,7 @@
           </li>
           <li>
             <div class="form-check form-check-group" aria-describedby="">
-              <input type="checkbox" id="checkbox21" value="Mele Rosse">
+              <input type="checkbox" id="checkbox21" value="Susine">
               <label for="checkbox21">Susine</label>
             </div>
             <div>
