--- a/src/app/components/pages/ortaggi/ortaggi.component.html
+++ b/src/app/components/pages/ortaggi/ortaggi.component.html
@@ -21,7 +21,7 @@
             </li>
             <li>
               <div class="form-check form-check-group" aria-describedby="">
-                <input type="checkbox" id="checkbox07" value="Rucola">
+                <input type="checkbox" id="checkbox07" value="Cipolle">
                 <label for="checkbox07">Cipolle</label>
               </div>
               <div>
@@ -112,7 +112,7 @@
             </li>
             <li>
               <div class="form-check form-check-group" aria-describedby="">
-                <input type="checkbox" id="checkbox14" value="Rucola">
+                <input type="checkbox" id="checkbox14" value="Cetrioli">
                 <label for="checkbo14">Cetrioli</label>
               </div>
               <div>
@@ -125,7 +125,7 @@
             </li>
             <li>
               <div class="form-check form-check-group" aria-describedby="">
-                <input type="checkbox" id="checkbox15" value="Rucola">
+                <input type="checkbox" id="checkbox15" value="Radicchio">
                 <label for="checkbo15">Radicchio</label>
               </div>
               <div>
@@ -138,7 +138,7 @@
             </li>
             <li>
               <div class="form-check form-check-group" aria-describedby="">
-                <input type="checkbox" id="checkbox16" value="Rucola">
+                <input type="checkbox" id="checkbox16" value="Ravanelli">
                 <label for="checkbo16">Ravanelli</label>
               </div>
               <div>
