--- a/src/app/components/pages/verdura/verdura.component.html
+++ b/src/app/components/pages/verdura/verdura.component.html
@@ -99,7 +99,7 @@
             </li>
             <li>
               <div class="form-check form-check-group" aria-describedby="">
-                <input type="checkbox" id="checkbox13" value="Carciofi">
+                <input type="checkbox" id="checkbox13" value="Cavoli">
                 <label for="checkbox13">Cavoli</label>
               </div>
               <div>
@@ -112,7 +112,7 @@
             </li>
             <li>
               <div class="form-check form-check-group" aria-describedby="">
-                <input type="checkbox" id="checkbox14" value="Carciofi">
+                <input type="checkbox" id="checkbox14" value="Cicoria">
                 <label for="checkbox14">Cicoria</label>
               </div>
               <div>
@@ -125,7 +125,7 @@
             </li>
             <li>
               <div class="form-check form-check-group" aria-describedby="">
-                <input type="checkbox" id="checkbox15" value="Carciofi">
+                <input type="checkbox" id="checkbox15" value="Fave">
                 <label for="checkbox15">Fave</label>
               </div>
               <div>
@@ -138,7 +138,7 @@
             </li>
             <li>
               <div class="form-check form-check-group" aria-describedby="">
-                <input type="checkbox" id="checkbox16" value="Carciofi">
+                <input type="checkbox" id="checkbox16" value="Peperoni">
                 <label for="checkbox16">Peperoni</label>
               </div>
               <div>
